# aio

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  srv.cpp  tcp_listener.cpp  tcp_listener.h  tcp_stream.h  vcpkg-configuration.json  vcpkg.json
benchmark/: tcp_client.cpp
benchmarks/: CMakeLists.txt
benchmarks/core/: buffer_copy_bench.cpp
benchmarks/rust/bench/: Cargo.toml
benchmarks/rust/bench/src/: main.rs
cmake/: FindAsyncSimple.cmake  FindGoogleBenchmark.cmake  FindYLT.cmake
core/: CMakeLists.txt  buffer.cpp  buffer.h  errors.h
demos/: CMakeLists.txt  char_count.cpp  char_count_low.cpp  net_tcp_demo.cpp  srv.cpp  tcp_server_201.cpp  tcp_server_202.cpp
demos/low_level_tcp_server/: README.md  bench_server.cpp  main.cpp  tcp_server.cpp  tcp_server.h
demos/server/: main.cpp  tcp_server.cpp  tcp_server.h
io/: CMakeLists.txt  base_server.cpp  base_server.h  buffered.cpp  buffered.h  context.cpp  context.h  file.cpp  stream.cpp  stream.h  tcp.h  tcp_stream.h  uring_context.h
io_context/: CMakeLists.txt  io_context.h  io_uring_ctx.cpp  io_uring_ctx.h  memory_stream_context.cpp  memory_stream_context.h  uring_context.h
net/: CMakeLists.txt  base_server.cpp  base_server.h  stream.cpp  stream.h  tcp.h  tcp_server.h  tcp_stream.cpp  tcp_stream.h
network/: CMakeLists.txt  base_server.cpp  base_server.h  handlers.cpp  handlers.h  stream.cpp  stream.h  tcp_listener.cpp  tcp_listener.h  tcp_server.cpp  tcp_server.h  tcp_stream.cpp  tcp_stream.h
server/: tcp_server.cpp  tcp_server.h
tests/: CMakeLists.txt  benchmark.go  benchmark.py  buf_reader_test.cpp  send_message.py  send_message_multi.py
tests/io_context/: in_memory_context_test.cpp
tests/network/: tcp_stream_test.cpp
